2007-11-09  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (stp_main_loop): Bump recvbuf to 8196 for
	compatibility with old transport.

2007-10-26  Martin Hunt  <hunt@redhat.com>
	PR5218
	* stapio.c (main): Set initialized properly when
	attached.

2007-10-12  Martin Hunt  <hunt@redhat.com>
	Changes to separate the symbols from the command channel.
	
	* cap.c (init_cap): Add CAP_DAC_OVERRIDE.
	* staprun.h: Change init_ctl_channel prototype.
	* ctl.c (init_ctl_channel): Modify to open either
	a command or symbol channel. Use ".cmd" and ".symbols"
	as the new names.
	* mainloop.c (init_stapio): Call init_ctl_channel(0);
	* staprun.c (cleanup): Call stop_symbol_thread().
	(main): Call start_symbol_thread().
	* staprun_funcs.c (handle_symbols): Make a thread.
	(start_symbol_thread): New.
	(stop_symbol_thread): New.
	
2007-10-11  Frank Ch. Eigler  <fche@elastic.org>

	* staprun.c (main): Move checks for init_cap and getuid
	from just before command line argument parsing to just after.

2007-10-09  Martin Hunt  <hunt@redhat.com>

	* common.c (set_clexec): New.
	* staprun.h: Add prototype for set_clexec.
	* relay*.c, ctl.c: Call set_clexec after
	file opens.

2007-09-14  Martin Hunt  <hunt@redhat.com>

	* ctl.c (init_ctl_channel): Return 1 if the ctl file opened
	was for the old relayfs transport.

	* mainloop.c (init_stapio): Don't call using_old_transport().
	Use the return of init_ctl_channel() instead.
	(using_old_transport): Deleted.

2007-08-31  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (start_cmd): Set the priority to
	forked processes back to normal.
	(system_cmd): Ditto.

2007-08-21  Martin Hunt  <hunt@redhat.com>

	* mainloop.c (start_cmd): Send SIGINT to target_cmd, 
	not stapio.

2007-08-20  David Smith  <dsmith@redhat.com>

	From Lai Jiangshan <laijs@cn.fujitsu.com>
	* common.c (parse_args): Make sure the '-c' and '-x' options can't
	be specified together.

2007-08-15  David Smith  <dsmith@redhat.com>
